Splitted figure and updated text/legend

--- a/SupplementalFigures.tex
+++ b/SupplementalFigures.tex
@@ -11,14 +11,14 @@
 \section*{Supplemental Figures}
 \begin{figure}[!ht]
 \centering
-	\begin{overpic}[width=0.91\linewidth]{images/S1.pdf}
+	\begin{overpic}[width=0.89\linewidth]{images/S1.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
 \captionof{figure}[]{
 Related to Figure 1.
-{\bf Time lapse recording of lateral root primordia development in five wild type datasets and the \emph{aurora} double mutant.}
-{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve. {\bf E-K:} Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. A single slice of the master cell file in dataset \#131203 at indicated time points is shown. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{E-G}) The cell divided without building a cell wall. (\textbf{H-J}) Both daughter cells divided periclinally with cell walls connected in the centre creating two binucleated cells. (\textbf{K}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
+{\bf Time lapse recording of lateral root primordia development in five wild type datasets.}
+{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.
 }
 \label{fig:S1}
 %
@@ -82,7 +82,22 @@ Related to Figure 4.
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=1.\linewidth]{images/S6.pdf}
+	\begin{overpic}[width=0.8\linewidth]{images/S6.pdf}
+	\end{overpic}
+\end{figure}
+\clearpage
+\captionof{figure}[]{
+Related to Figure 4.
+{\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant (dataset \#131203).}
+{\bf A:} The images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf B-G:} Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. A single slice of the master cell file in dataset \#131203 at indicated time points is shown. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{B-D}) The cell divided without building a cell wall. (\textbf{E-G}) Both daughter cells divided periclinally with cell walls connected in the centre creating two binucleated cells. (\textbf{H}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
+}
+\label{fig:S6}
+%
+\clearpage
+%
+\begin{figure}[htbp]
+\centering
+	\begin{overpic}[width=1.\linewidth]{images/S7.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
@@ -90,7 +105,7 @@ Related to Figure 4.
 Related to Figure 5.
 {\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented (\textbf{A} is related to Figure 1A, \textbf{B} is related to Figure 5D, \textbf{C} is related to Figure 5G and \textbf{D} is related to Figure 5J). Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers generated by the sequence of periclinal divisions. The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines (cylinders) are drawn for at least two cells through the centres of mass of the corresponding cells. At the bottom of each model, the value of the used area ratio as well as the average number of cells, anticlinal and periclinal divisions are listed.
 }
-\label{fig:S6}
+\label{fig:S7}
 %
 \clearpage
 
