--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,letterpaper, draft]{article}
+\documentclass[10pt,letterpaper, final]{article}
 \pagestyle{empty} % no page numbers
 \usepackage{ocg}
 \usepackage{times}
